--- a/android/material-showcase/app/src/main/res/layout/activity_live_barcode.xml
+++ b/android/material-showcase/app/src/main/res/layout/activity_live_barcode.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:keepScreenOn="true">
+    android:keepScreenOn="true"
+    tools:context=".LiveBarcodeScanningActivity">
 
   <!-- CameraX PreviewView -->
   <androidx.camera.view.PreviewView
@@ -25,7 +27,7 @@
       layout="@layout/top_action_bar_in_live_camera"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:layout_gravity="top"/>
+      android:layout_gravity="top" />
 
   <!-- Prompt Chip (if used in your code) -->
   <com.google.android.material.chip.Chip
@@ -36,6 +38,30 @@
       android:layout_gravity="bottom|center_horizontal"
       android:layout_marginBottom="16dp"
       android:text="Point at a barcode" />
+
+  <!-- Record Button to start/stop recording -->
+  <com.google.android.material.floatingactionbutton.FloatingActionButton
+      android:id="@+id/record_button"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_gravity="bottom|end"
+      android:layout_margin="16dp"
+      android:contentDescription="Start Recording"
+      android:src="@drawable/ic_record" />
+
+  <!-- TextView to show recording duration -->
+  <TextView
+      android:id="@+id/recording_duration"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_gravity="bottom|start"
+      android:layout_marginStart="16dp"
+      android:layout_marginBottom="16dp"
+      android:textColor="@android:color/white"
+      android:textStyle="bold"
+      android:textSize="18sp"
+      android:visibility="gone"
+      android:text="00:00" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
