--- a/android/material-showcase/app/src/main/res/layout/activity_barcode_search.xml
+++ b/android/material-showcase/app/src/main/res/layout/activity_barcode_search.xml
@@ -14,14 +14,29 @@
         android:inputType="text"
         android:layout_marginBottom="16dp" />
 
-    <!-- Search Button -->
-    <Button
-        android:id="@+id/searchButton"
+    <!-- Horizontal layout for Search and Re-record buttons -->
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Search"
+        android:orientation="horizontal"
         android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="16dp" />
+        android:layout_marginBottom="16dp">
+
+        <!-- Search Button -->
+        <Button
+            android:id="@+id/searchButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Search"
+            android:layout_marginEnd="16dp" />
+
+        <!-- Re-record Button -->
+        <Button
+            android:id="@+id/reRecordButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Re-record" />
+    </LinearLayout>
 
     <!-- Video View for Playing Barcode Video -->
     <VideoView
